# AC-Workshop-Management-System

./: ac_workshop.db  pyproject.toml
.github/workflows/: build-exe.yml
ac_workshop/: ac_workshop.db  database.py  main.py  models.py
ac_workshop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ac_workshop/ui/: add_job.py  login.py  main_menu.py  upcoming.py
