[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ac_workshop"
version = "0.1.0"
description = "AC Repair Workshop desktop application"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Maleesha", email="supunimaleesha@gmail.com.com" }
]
license = { text = "MIT" }
dependencies = [
  "tkinterweb; sys_platform == 'win32' or sys_platform == 'darwin'"
]

[project.scripts]
ac-workshop = "ac_workshop.main:main"

